crates/math-core/tests/snapshots/error_test__text_command_in_math_mode.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\ae"
---
Error: Not valid in math mode.
   ╭─[ <input>:1:1 ]
   │
 1 │ \ae
   │ ─┬─  
   │  ╰─── this is not valid in math mode
───╯
